# ASCII-fluid-smoke-simulation

./: .gitignore  CMakeLists.txt  README.md  dummy.py  fluid_math.cpp  fluid_math.h  interactive.cpp  interactive.h  main.cpp  requirements.txt  settings.cpp  settings.h  terminal.cpp  terminal.h  test_functions.cpp  test_functions.h
src/: main.cpp
src/core/: engine_timing.cpp  engine_timing.h  interactive.cpp  interactive.h  settings.cpp  settings.h
src/fluid/: fluid_container.cpp  fluid_math.cpp  fluid_math.h  multi-thread.cpp  multi-thread.h
src/launcher/: launcher.cpp
src/launcher/launcher_py/: app.py  constants.py  logic.py  main.py  widgets.py
src/render/: renderer.cpp  renderer.h  theme_presets.h  themes.cpp  themes.h
src/terminal/: input_state.h  terminal.cpp  terminal.h  themes.cpp  themes.h
